--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,7 +14,7 @@
 .navbar {
   background-color: var(--background-color-primary);
   box-shadow: 0 0 4px 0 rgba(0,0,0,0.1);
-  height: 3.5rem;
+  height: var(--navbar-height);
   padding: 0 5%;
   display: flex;
   justify-content: space-between;
