--- a/css/variables.css
+++ b/css/variables.css
@@ -20,5 +20,9 @@
   --background-color-new-function: #AF94FF;
   --background-color-error:  rgb(241, 38, 38);
   --background-color-success:  rgb(6, 185, 6);
+
+  --navbar-height: 3.5rem;
+  /* This variable is used for both navbar height and body padding to prevent content from being hidden behind the fixed navbar.
+   It is also used with scroll-padding-top to prevent anchor links from scrolling behind the fixed navbar. */
 }
 
